# step-by-step-3d

./: .clang-format  .gitignore  CMakeLists.txt  README.md
OgreCommontempl/include/: BaseGameState.h  GameEntity.h  GameEntityManager.h  GameState.h  GraphicsSystem.h  InputListeners.h  MainEntryPointHelper.h
OgreCommontempl/include/System/OSX/: OSXUtils.h
OgreCommontempl/include/System/iOS/: iOSUtils.h
OgreCommontempl/include/Threading/: MqMessages.h  YieldTimer.h
OgreCommontempl/include/Utils/: ScreenSpaceReflections.h  TestUtils.h
OgreCommontempl/src/: BaseGameState.cpp  CameraController.cpp  GraphicsSystem.cpp  LogicSystem.cpp
OgreCommontempl/src/System/Desktop/: MainLoopMultiThreaded.cpp  MainLoopSingleThreaded.cpp
OgreCommontempl/src/Threading/: MessageQueueSystem.cpp
OgreCommontempl/src/Utils/: HdrUtils.cpp  MiscUtils.cpp
ogre1/include/: EmptyProjectGameState.h
ogre1/include/OgreCommon/: CameraController.h  TutorialGameState.h
ogre1/src/: EmptyProject.cpp  EmptyProjectGameState.cpp
ogre1/src/OgreCommon/: GraphicsSystem.cpp  TutorialGameState.cpp
ogre2/: CMakeLists.txt
ogre2/CMake/Dependencies/: OGRE.cmake
ogre2/include/OgreCommon/: BaseSystem.h  CameraController.h  LogicSystem.h  SdlEmulationLayer.h  SdlInputHandler.h
ogre2/include/OgreCommon/System/: MainEntryPoints.h  StaticPluginLoader.h
ogre2/src/: GraphicsGameState.cpp  GraphicsGameState.h  LogicGameState.cpp  LogicGameState.h  MyProject.cpp
ogre2/src/OgreCommon/: BaseSystem.cpp  GameEntityManager.cpp  SdlInputHandler.cpp
step1/: CMakeLists.txt  main.cpp
(+13 files in other folders)
